--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -188,21 +188,21 @@ jobs:
         id: changelog
         run: |
           echo "Generating changelog..."
+
+          # Generate formatted changelog (last 10 commits)
           CHANGELOG=$(git log --pretty=format:"- %s (%h) by %an" -n 10)
-          echo "Raw changelog content:"
+
+          echo "Changelog content:"
           echo "$CHANGELOG"
 
-          # Properly escape content and format for GitHub output
-          CHANGELOG_ESCAPED=$(echo "$CHANGELOG" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+          # Set as an output using the proper multiline format
+          echo "CHANGELOG<<EOF" >> $GITHUB_ENV
+          echo "$CHANGELOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
-          # Create multiline output using delimiter
-          delimiter=$(openssl rand -hex 8)
-          echo "CHANGELOG<<${delimiter}" >> $GITHUB_OUTPUT
-          echo "$CHANGELOG" >> $GITHUB_OUTPUT
-          echo "${delimiter}" >> $GITHUB_OUTPUT
-
-          # Create file version
+          # Save to a file as well
           echo "$CHANGELOG" > changelog.txt
+        shell: bash
 
       - name: Upload Changelog as artifact
         uses: actions/upload-artifact@v4
