--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -1,4 +1,4 @@
-name: 🚀 EAS Android Build & Release
+name: 🚀 EAS Android Build & Smart Release
 
 on:
   push:
@@ -11,280 +11,235 @@ env:
 
 jobs:
   build-android:
-    name: 🛠️ Build Android APK
+    name: 🔨 Build Android - Version Manager
     runs-on: ubuntu-latest
     outputs:
       build_id: ${{ steps.build.outputs.BUILD_ID }}
-
+      app_version: ${{ steps.version-control.outputs.app_version }}
+      build_number: ${{ steps.version-control.outputs.build_number }}
+      build_date: ${{ steps.version-control.outputs.build_date }}
+      is_production: ${{ steps.version-control.outputs.is_production }}
     steps:
       # ========================
-      # 🔍 Repository Setup
+      # 🛠️ Repository Setup
       # ========================
-      - name: 🔍 Checkout repository
+      - name: "📦 Checkout (Full History)"
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Fetch full history for changelog generation
+          fetch-depth: 0
 
       # ========================
-      # ⚙️ Environment Setup
+      # ⚙️ Environment Configuration
       # ========================
-      - name: ⚙️ Setup Node.js
+      - name: "📦 Setup Node.js 20.x"
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          cache: "npm" # Cache npm dependencies for faster builds
+          cache: "npm"
 
-      - name: 📦 Install dependencies
-        run: npm ci # Use `npm ci` for reproducible builds
-
-      - name: 📥 Install EAS CLI
-        run: npm install -g eas-cli@latest
+      - name: "🧩 Install dependencies (ci)"
+        run: npm ci
 
       # ========================
-      # 🔐 Expo Authentication
+      # 🔄 Version Management
       # ========================
-      - name: 🔐 Debug Expo Authentication
+      - name: "🔄 Update Production Version"
+        if: github.ref == 'refs/heads/main'
+        run: node --input-type=module scripts/version-update.js
+
+      - name: "🔧 Configure Git for Automation"
+        if: github.ref == 'refs/heads/main'
         run: |
-          echo "🔍 Checking Expo authentication..."
-          npx eas whoami --token $EXPO_TOKEN || echo "❌ Expo authentication check failed!"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
-      # ========================
-      # 🚀 Start EAS Build
-      # ========================
-      - name: 🚀 Start EAS Build
-        id: build
+      - name: "💾 Commit Version Update"
+        if: github.ref == 'refs/heads/main'
         run: |
-          echo "🚀 Starting EAS build..."
-          sudo apt-get install -y jq  # Install jq for JSON parsing
+          git add app.config.js
+          git commit -m "chore: Auto-increment version [skip ci]"
+          git push
 
-          # Start the build and capture JSON output
-          BUILD_JSON=$(npx eas build -p android --profile production --non-interactive --json)
-          echo "📄 Raw build output: $BUILD_JSON"
-
-          # Extract BUILD_ID from JSON output
-          BUILD_ID=$(echo "$BUILD_JSON" | jq -r '.[0].id')
-          if [[ -z "$BUILD_ID" || "$BUILD_ID" == "null" ]]; then
-            echo "❌ Error: Failed to retrieve BUILD_ID!"
-            exit 1
+      # ========================
+      # 📌 Version Tagging
+      # ========================
+      - name: "🏷️ Set CI/CD Versions"
+        id: version-control
+        run: |
+          # Set production or preview version
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            APP_VERSION=$(node -p "require('./app.config.js').expo.version")
+            IS_PRODUCTION="true"
+          else
+            APP_VERSION="1.0.0-prerelease.${{ github.run_number }}"
+            IS_PRODUCTION="false"
           fi
 
-          echo "✅ EAS Build started with ID: $BUILD_ID"
+          # Generate build identifiers
+          BUILD_NUMBER="${{ github.run_id }}"
+          BUILD_DATE=$(date +'%Y%m%d-%H%M%S')
+
+          # Set outputs for downstream jobs
+          echo "app_version=$APP_VERSION" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
+          echo "build_date=$BUILD_DATE" >> $GITHUB_OUTPUT
+          echo "is_production=$IS_PRODUCTION" >> $GITHUB_OUTPUT
+
+          # Export environment variables
+          echo "APP_VERSION=$APP_VERSION" >> $GITHUB_ENV
+          echo "BUILD_NUMBER=$BUILD_NUMBER" >> $GITHUB_ENV
+          echo "BUILD_DATE=$BUILD_DATE" >> $GITHUB_ENV
+
+      # ========================
+      # 🔐 EAS Setup & Auth
+      # ========================
+      - name: "⚙️ Install EAS CLI"
+        run: npm install -g eas-cli@latest
+
+      - name: "🔐 Verify Expo Credentials"
+        run: npx eas whoami --token $EXPO_TOKEN
+
+      # ========================
+      # 🏗️ Build Execution
+      # ========================
+      - name: "🚀 Trigger EAS Build"
+        id: build
+        run: |
+          echo "🔄 Initializing build process..."
+          sudo apt-get install -y jq
+
+          # Execute build and capture metadata
+          BUILD_JSON=$(npx eas build -p android --profile production --non-interactive --json)
+          BUILD_ID=$(echo "$BUILD_JSON" | jq -r '.[0].id')
+
+          # Export build ID for downstream jobs
           echo "BUILD_ID=$BUILD_ID" >> $GITHUB_ENV
           echo "BUILD_ID=$BUILD_ID" >> $GITHUB_OUTPUT
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
   download-apk:
-    name: 📥 Download APK
+    name: "📥 APK Artifact Handler"
     runs-on: ubuntu-latest
     needs: build-android
     outputs:
       apk_path: ${{ steps.download.outputs.APK_PATH }}
-
     steps:
       # ========================
-      # 🔍 Repository Setup
+      # 🛠️ Environment Setup
       # ========================
-      - name: 🔍 Checkout repository
+      - name: "📦 Checkout Repository"
         uses: actions/checkout@v4
 
-      # ========================
-      # ⚙️ Environment Setup
-      # ========================
-      - name: ⚙️ Setup Node.js
+      - name: "⚙️ Setup Node.js"
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
 
-      - name: 🛠️ Install Required Tools
+      # ========================
+      # 📦 Dependency Management
+      # ========================
+      - name: "🧰 Install Build Tools"
         run: |
           npm install -g eas-cli@latest
-          sudo apt-get update
-          sudo apt-get install -y jq curl  # Install tools for JSON parsing and file downloads
-
-      - name: 📦 Install Project Dependencies (Including dotenv)
-        run: npm ci
+          sudo apt-get install -y jq curl
 
       # ========================
-      # 🔍 Verify Project Files
+      # 🔍 Build Monitoring
       # ========================
-      - name: 🔍 Verify Project Files
+      - name: "⏳ Wait for Build Completion"
         run: |
-          echo "📂 Current directory contents:"
-          ls -la
-          echo "🔍 Checking for eas.json:"
-          cat eas.json || echo "❌ No eas.json found!"
+          echo "⏰ Monitoring build status..."
+          npx eas build:wait --build-id ${{ needs.build-android.outputs.build_id }} --timeout 1800
 
       # ========================
-      # ⏳ Wait for EAS Build to Complete
+      # 📦 Artifact Handling
       # ========================
-      - name: ⏳ Wait for EAS Build to Complete
-        run: |
-          cd $GITHUB_WORKSPACE
-          BUILD_ID=${{ needs.build-android.outputs.build_id }}
-          echo "🔍 Starting build monitoring for BUILD_ID: $BUILD_ID"
-
-          # Initial check without JSON for better error visibility
-          npx eas build:view $BUILD_ID || true
-
-          RETRY_COUNT=0
-          MAX_RETRIES=120
-          SLEEP_TIME=30
-
-          while [[ $RETRY_COUNT -lt $MAX_RETRIES ]]; do
-            echo -e "\n=== Attempt $((RETRY_COUNT+1))/$MAX_RETRIES ==="
-            
-            # Fetch build status in JSON format
-            BUILD_STATUS_JSON=$(npx eas build:view --json $BUILD_ID)
-            echo "📄 Raw API response: $BUILD_STATUS_JSON"
-
-            # Validate JSON and check for empty response
-            if ! echo "$BUILD_STATUS_JSON" | jq empty >/dev/null 2>&1 || [[ -z "$BUILD_STATUS_JSON" ]]; then
-              echo "❌ Error: Invalid or empty response from EAS API! Retrying..."
-              RETRY_COUNT=$((RETRY_COUNT+1))
-              sleep $SLEEP_TIME
-              continue
-            fi
-
-            BUILD_STATUS=$(echo "$BUILD_STATUS_JSON" | jq -r '.status')
-            ERROR_MESSAGE=$(echo "$BUILD_STATUS_JSON" | jq -r '.error.message // empty')
-
-            echo "🔍 Parsed status: $BUILD_STATUS"
-            [[ -n "$ERROR_MESSAGE" ]] && echo "❌ Error message: $ERROR_MESSAGE"
-
-            case $BUILD_STATUS in
-              "FINISHED")
-                APK_URL=$(echo "$BUILD_STATUS_JSON" | jq -r '.artifacts.buildUrl')
-                if [[ -z "$APK_URL" || "$APK_URL" == "null" ]]; then
-                  echo "❌ Error: Successful build but no APK URL found!"
-                  exit 1
-                fi
-                echo "✅ APK_URL=$APK_URL" >> $GITHUB_ENV
-                exit 0
-                ;;
-
-              "ERRORED"|"CANCELLED")
-                  echo "❌ Build failed! Error details:"
-                  echo "$BUILD_STATUS_JSON" | jq .
-                  exit 1
-                  ;;
-
-              "NEW"|"IN_QUE"|"IN_PROGRESS"|"PENDING")
-                echo "⏳ Build is still in progress..."
-                ;;
-
-              *)
-                echo "❌ Unknown build status: $BUILD_STATUS"
-                exit 1
-                ;;
-            esac
-
-            RETRY_COUNT=$((RETRY_COUNT+1))
-            sleep $SLEEP_TIME
-          done
-
-          echo "❌ Error: Build did not complete within the expected time!"
-          exit 1
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-
-      # ========================
-      # 📥 Download APK
-      # ========================
-      - name: 📥 Download APK
+      - name: "📥 Download APK"
         id: download
         run: |
-          echo "📥 Downloading APK from: $APK_URL"
+          echo "🔽 Retrieving APK URL..."
+          APK_URL=$(npx eas build:list --build-id ${{ needs.build-android.outputs.build_id }} --json | jq -r '.[0].artifacts.url')
+          echo "📥 Downloading APK from $APK_URL..."
           curl -L "$APK_URL" -o app-release.apk
-          ls -lh app-release.apk
-          echo "✅ APK_PATH=app-release.apk" >> $GITHUB_OUTPUT
-          echo "📦 Downloaded APK size: $(du -h app-release.apk | cut -f1)"
+          echo "APK_PATH=app-release.apk" >> $GITHUB_OUTPUT
 
-      # ========================
-      # 📤 Upload APK as Artifact
-      # ========================
-      - name: 📤 Upload APK as artifact
+      - name: "📤 Upload Artifact"
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
           path: app-release.apk
 
   generate-changelog:
-    name: 📝 Generate Changelog
+    name: "📜 Changelog Generator"
     runs-on: ubuntu-latest
     needs: build-android
     outputs:
       changelog: ${{ steps.changelog.outputs.CHANGELOG }}
-
     steps:
       # ========================
-      # 🔍 Repository Setup
+      # 🛠️ Repository Setup
       # ========================
-      - name: 🔍 Checkout repository
+      - name: "📂 Checkout with Full History"
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Fetch full history for changelog generation
+          fetch-depth: 0
 
       # ========================
-      # 📝 Generate Changelog
+      # 📄 Changelog Generation
       # ========================
-      - name: 📝 Generate Changelog
+      - name: "📋 Create Release Notes"
         id: changelog
         run: |
-          echo "📝 Generating changelog..."
-
-          # Generate formatted changelog (last 10 commits)
-          CHANGELOG=$(git log --pretty=format:"- %s (%h) by %an" -n 10)
-
-          echo "📄 Changelog content:"
-          echo "$CHANGELOG"
-
-          # Set as an output using the proper multiline format
-          echo "CHANGELOG<<EOF" >> $GITHUB_ENV
-          echo "$CHANGELOG" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-
-          # Save to a file as well
+          echo "📝 Generating changelog from git history..."
+          CHANGELOG=$(git log --pretty=format:"- %s (%h) by %an" -n 15)
           echo "$CHANGELOG" > changelog.txt
-        shell: bash
+          echo "CHANGELOG=$(cat changelog.txt)" >> $GITHUB_OUTPUT
 
-      # ========================
-      # 📤 Upload Changelog as Artifact
-      # ========================
-      - name: 📤 Upload Changelog as artifact
+      - name: "📤 Upload Changelog"
         uses: actions/upload-artifact@v4
         with:
           name: changelog
           path: changelog.txt
 
   create-release:
-    name: 🚀 Create GitHub Release
+    name: "🚀 Smart Release Publisher"
     runs-on: ubuntu-latest
-    needs: [download-apk, generate-changelog]
-
+    needs: [build-android, download-apk, generate-changelog]
     steps:
       # ========================
-      # 📥 Download Artifacts
+      # 📥 Artifact Retrieval
       # ========================
-      - name: 📥 Download APK artifact
+      - name: "📦 Get APK Artifact"
         uses: actions/download-artifact@v4
         with:
           name: android-apk
 
-      - name: 📥 Download Changelog artifact
+      - name: "📄 Get Changelog"
         uses: actions/download-artifact@v4
         with:
           name: changelog
 
       # ========================
-      # 🚀 Create GitHub Release
+      # 🏷️ Release Creation
       # ========================
-      - name: 🚀 Create GitHub Release
+      - name: "🎚️ Determine Release Type"
+        id: release-type
+        run: |
+          echo "🔍 Detecting release type..."
+          if [ "${{ needs.build-android.outputs.is_production }}" = "true" ]; then
+            echo "🟢 Production release detected"
+            echo "RELEASE_TAG=v${{ needs.build-android.outputs.app_version }}" >> $GITHUB_ENV
+            echo "RELEASE_TITLE=Production Release v${{ needs.build-android.outputs.app_version }}" >> $GITHUB_ENV
+          else
+            echo "🟡 Nightly build detected"
+            echo "RELEASE_TAG=nightly-${{ needs.build-android.outputs.build_date }}" >> $GITHUB_ENV
+            echo "RELEASE_TITLE=Nightly Build (${{ needs.build-android.outputs.build_date }})" >> $GITHUB_ENV
+          fi
+
+      - name: "🎉 Publish GitHub Release"
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v1.0.${{ github.run_number }}
-          name: Release v1.0.${{ github.run_number }}
+          tag_name: ${{ env.RELEASE_TAG }}
+          name: ${{ env.RELEASE_TITLE }}
           body_path: changelog.txt
-          draft: false
-          prerelease: false
           files: app-release.apk
+          prerelease: ${{ needs.build-android.outputs.is_production != 'true' }}
