--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -45,7 +45,7 @@ jobs:
       # ========================
       - name: "🔄 Update Production Version"
         if: github.ref == 'refs/heads/main'
-        run: node --input-type=module scripts/version-update.js
+        run: node scripts/bumpVersion.js
 
       - name: "🔧 Configure Git for Automation"
         if: github.ref == 'refs/heads/main'
@@ -56,7 +56,7 @@ jobs:
       - name: "💾 Commit Version Update"
         if: github.ref == 'refs/heads/main'
         run: |
-          git add app.config.js
+          git add version.json
           git commit -m "chore: Auto-increment version [skip ci]"
           git push
 
