--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "prebuild": "node scripts/setupBatteryOptimization.js",
     "android": "npm run prebuild && expo run:android",
+    "bump-version": "node scripts/bumpVersion.js",
     "eas-build-preinstall": "node scripts/setupBatteryOptimization.js",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -71,6 +72,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
+    "semver": "^7.7.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.3.3"
   },
