--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -66,9 +66,9 @@ jobs:
       - name: "🏷️ Set CI/CD Versions"
         id: version-control
         run: |
-          # Set production or preview version
+          # Use version from version.json (requires jq)
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            APP_VERSION=$(node -p "require('./app.config.js').expo.version")
+            APP_VERSION=$(jq -r '.version' version.json)
             IS_PRODUCTION="true"
           else
             APP_VERSION="1.0.0-prerelease.${{ github.run_number }}"
@@ -107,12 +107,8 @@ jobs:
         run: |
           echo "🔄 Initializing build process..."
           sudo apt-get install -y jq
-
-          # Execute build and capture metadata
           BUILD_JSON=$(npx eas build -p android --profile production --non-interactive --json)
           BUILD_ID=$(echo "$BUILD_JSON" | jq -r '.[0].id')
-
-          # Export build ID for downstream jobs
           echo "BUILD_ID=$BUILD_ID" >> $GITHUB_ENV
           echo "BUILD_ID=$BUILD_ID" >> $GITHUB_OUTPUT
 
