--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "prebuild": "node scripts/setupBatteryOptimization.js",
     "android": "npm run prebuild && expo run:android",
-    "bump-version": "node scripts/bumpVersion.cjs",
+    "bump-version": "node scripts/bumpVersion.js",
     "eas-build-preinstall": "node scripts/setupBatteryOptimization.js",
     "ios": "expo run:ios",
     "web": "expo start --web",
