--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -130,6 +130,9 @@ jobs:
         with:
           node-version: 20.x
 
+      - name: "📦 Install Dependencies"
+        run: npm ci
+
       # ========================
       # 📦 Dependency Management
       # ========================
