--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
     "@dev-plugins/react-navigation": "^0.1.0",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
-    "@react-native-firebase/app": "^21.7.1",
-    "@react-native-firebase/auth": "^21.7.1",
-    "@react-native-firebase/messaging": "^21.7.1",
-    "@react-navigation/native": "^7.0.0",
-    "@react-navigation/native-stack": "^7.0.0",
-    "babel-preset-expo": "^12.0.5",
+    "@react-native-firebase/app": "^21.11.0",
+    "@react-native-firebase/auth": "^21.11.0",
+    "@react-native-firebase/messaging": "^21.11.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "babel-preset-expo": "^12.0.9",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.24",
-    "expo-background-fetch": "~13.0.4",
+    "expo": "~52.0.37",
+    "expo-background-fetch": "~13.0.5",
     "expo-battery": "~9.0.2",
-    "expo-build-properties": "^0.13.1",
-    "expo-camera": "~16.0.14",
+    "expo-build-properties": "^0.13.2",
+    "expo-camera": "~16.0.17",
     "expo-cellular": "~7.0.2",
     "expo-clipboard": "~7.0.1",
-    "expo-dev-client": "~5.0.8",
-    "expo-device": "~7.0.1",
-    "expo-font": "~13.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-location": "^18.0.5",
-    "expo-media-library": "~17.0.5",
-    "expo-notifications": "~0.29.11",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.19",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-task-manager": "~12.0.4",
-    "expo-web-browser": "~14.0.1",
-    "firebase": "^11.1.0",
+    "expo-dev-client": "~5.0.12",
+    "expo-device": "~7.0.2",
+    "expo-font": "~13.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.7",
+    "expo-media-library": "~17.0.6",
+    "expo-notifications": "~0.29.13",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-task-manager": "~12.0.5",
+    "expo-web-browser": "~14.0.2",
+    "firebase": "^11.3.1",
     "fs-extra": "^11.3.0",
     "nativewind": "^4.1.23",
     "path": "^0.12.7",
@@ -62,7 +62,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
@@ -70,11 +70,11 @@
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@babel/core": "^7.26.9",
+    "@types/react": "~18.3.18",
     "install": "^0.13.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest": "^29.7.0",
+    "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
     "semver": "^7.7.1",
     "tailwindcss": "^3.4.17",
@@ -90,5 +90,10 @@
         ]
       }
     }
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "protobufjs"
+    ]
   }
 }
