--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -35,10 +35,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          cache: "npm"
+          cache: "pnpm"
 
       - name: "🧩 Install dependencies (ci)"
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       # ========================
       # 🔄 Version Management
@@ -94,7 +94,7 @@ jobs:
       # 🔐 EAS Setup & Auth
       # ========================
       - name: "⚙️ Install EAS CLI"
-        run: npm install -g eas-cli@latest
+        run: pnpm add -g eas-cli@latest
 
       - name: "🔐 Verify Expo Credentials"
         run: npx eas whoami --token $EXPO_TOKEN
@@ -137,16 +137,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
+          cache: "pnpm"
 
       - name: "📦 Install Dependencies"
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       # ========================
       # 📦 Dependency Management
       # ========================
       - name: "🧰 Install Build Tools"
         run: |
-          npm install -g eas-cli@latest
+          pnpm add -g eas-cli@latest
           sudo apt-get update
           sudo apt-get install -y jq curl dotenv
 
@@ -161,7 +162,7 @@ jobs:
           echo "🔍 Starting build monitoring for BUILD_ID: $BUILD_ID"
 
           # Initial check without JSON for better error visibility
-          npx eas build:view $BUILD_ID || true
+          eas build:view $BUILD_ID || true
 
           RETRY_COUNT=0
           MAX_RETRIES=120
@@ -171,7 +172,7 @@ jobs:
             echo -e "\n=== Attempt $((RETRY_COUNT+1))/$MAX_RETRIES ==="
             
             # Fetch build status in JSON format
-            BUILD_STATUS_JSON=$(npx eas build:view --json $BUILD_ID)
+            BUILD_STATUS_JSON=$(eas build:view --json $BUILD_ID)
             echo "📄 Raw API response: $BUILD_STATUS_JSON"
 
             # Validate JSON and check for empty response
@@ -232,7 +233,7 @@ jobs:
         run: |
           echo "🔽 Retrieving APK URL..."
           # Use the build:view command to get a clean JSON response
-          APK_URL=$(npx eas build:view --json ${{ needs.build-android.outputs.build_id }} | jq -r '.artifacts.buildUrl')
+          APK_URL=$(eas build:view --json ${{ needs.build-android.outputs.build_id }} | jq -r '.artifacts.buildUrl')
           if [[ -z "$APK_URL" || "$APK_URL" == "null" ]]; then
             echo "❌ Error: No APK URL found!"
             exit 1
