--- a/.github/workflows/eas-android-build.yml
+++ b/.github/workflows/eas-android-build.yml
@@ -37,6 +37,11 @@ jobs:
           node-version: 20.x
           cache: "pnpm"
 
+      - name: "🔧 Setup pnpm"
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: "🧩 Install dependencies (ci)"
         run: pnpm install --frozen-lockfile
 
@@ -138,6 +143,11 @@ jobs:
         with:
           node-version: 20.x
           cache: "pnpm"
+
+      - name: "🔧 Setup pnpm"
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: "📦 Install Dependencies"
         run: pnpm install --frozen-lockfile
